--- a/assets/index.html
+++ b/assets/index.html
@@ -12,17 +12,21 @@
 <body>
     <header id="main-header">
         <nav class="header-top">
-            <img src="img/logo.png" alt="logo" class="main-logo">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li class="logo">progressus</li>
+                <li class="navigation navbar active"><a href="#">Home</a></li>
+                <li class="navigation"><a href="about.html">About</a></li>
+                <li class="navigation"><a href="contact.html">Contact</a></li>
+                <li>
+                    <button>Sing In/Sign Up</button>
+                </li>
+                <li>
+                    <span class="theme-toggler">
+                        <i class="fa-regular fa-sun active"></i>
+                        <i class="fa-solid fa-moon"></i>
+                    </span>
+                </li>
             </ul>
-            <button>Sing In/Sign Up</button>
-            <span class="theme-toggler">
-                <i class="fa-regular fa-sun active"></i>
-                <i class="fa-solid fa-moon"></i>
-            </span>
         </nav>
         <div class="header-bottom">
 
