Showcase Section Markup

--- a/assets/index.html
+++ b/assets/index.html
@@ -29,7 +29,10 @@
             </ul>
         </nav>
         <div class="header-bottom">
-
+            <h1>AWESOME, CUSTOMIZABLE, FREE</h1>
+            <p>PROGRESSUS: free business bootstrap template by GetTemplate</p>
+            <button class="transparent">More info</button>
+            <button class="orange">More info</button>
         </div>
     </header>
 </body>
