--- a/assets/index.html
+++ b/assets/index.html
@@ -31,10 +31,16 @@
         <div class="header-bottom">
             <h1>AWESOME, CUSTOMIZABLE, FREE</h1>
             <p>PROGRESSUS: free business bootstrap template by GetTemplate</p>
-            <button class="transparent">More info</button>
-            <button class="orange">More info</button>
+            <button class="transparent btn">More info</button>
+            <button class="orange btn">More info</button>
         </div>
     </header>
+    <!----------------- SECTION ------------------->
+    <section id="main-section">
+        <h1>The best place to tell people why they are here</h1>
+        <p>The difference between involvement and commintment is like an eggs-and-ham breakfast:
+            the chicken was involved; the pig was committed.</p>
+    </section>
 </body>
 
 </html>
