main section styles

--- a/assets/index.html
+++ b/assets/index.html
@@ -41,6 +41,47 @@
         <p>The difference between involvement and commintment is like an eggs-and-ham breakfast:
             the chicken was involved; the pig was committed.</p>
     </section>
+    <footer id="main-footer">
+        <div class="container">
+            <div class="for-cnt">
+                <div class="for-hs">
+                    <h4>Contact</h4>
+                </div>
+                <div class="for-hs">
+                    <h5>+998 43 794-33-58</h5>
+                    <h5>email@somewhere.com</h5>
+                </div>
+                <div class="for-hs">
+                    <h5>234 Hiddon Pond Road, Ashland City, BT 37015</h5>
+                </div>
+            </div>
+            <div class="icons">
+                <div class="for-hs">
+                    <h4>Follow me</h4>
+                </div>
+                <div class="for-hs">
+                    <i class="fa-brands fa-facebook fa-1x"></i>
+                    <i class="fa-brands fa-twitter fa-1x"></i>
+                    <i class="fa-brands fa-telegram fa-1x"></i>
+                    <i class="fa-brands fa-instagram fa-1x"></i>
+                </div>
+            </div>
+            <div class="widget">
+                <div class="for-hs">
+                    <h4>Text widget</h4>
+                </div>
+                <div class="for-hs">
+                    <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi numquam fugit error
+                        consequuntur cum quis voluptas reiciendis deleniti provident illo? Quaerat, maxime laudantium
+                        totam sit eius harum. Veritatis, quibusdam amet dolore recusandae nobis dolor unde!</h5>
+                </div>
+                <div class="for-hs">
+                    <h5>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor cupiditate inventore veniam
+                        debitis. Deserunt similique sed assumenda quod labore debitis.</h5>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
