--- a/assets/index.html
+++ b/assets/index.html
@@ -31,8 +31,8 @@
         <div class="header-bottom">
             <h1>AWESOME, CUSTOMIZABLE, FREE</h1>
             <p>PROGRESSUS: free business bootstrap template by GetTemplate</p>
-            <button class="transparent btn">More info</button>
-            <button class="orange btn">More info</button>
+            <button class="transparent btn5">More info</button>
+            <button class="orange btn5">More info</button>
         </div>
     </header>
     <!----------------- SECTION ------------------->
@@ -40,6 +40,96 @@
         <h1>The best place to tell people why they are here</h1>
         <p>The difference between involvement and commintment is like an eggs-and-ham breakfast:
             the chicken was involved; the pig was committed.</p>
+    </section>
+    <section id="about-section">
+        <div class="about-info">
+            <h1>Reasons to use this template</h1>
+        </div>
+        <div class="features">
+            <i class="fa-solid fa-gears fa-3x"></i>
+            <div class="headings">
+                <h3>Bootstrap powered</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex architecto laboriosam perspiciatis assumenda
+                iure ad rerum, adipisci porro, saepe, inventore cum maiores numquam laborum officia vitae commodi quam
+                vel voluptatibus quaerat ut dolore? Ex, repellendus officia reiciendis molestiae architecto quibusdam.
+            </p>
+        </div>
+        <div class="features">
+            <i class="fa-solid fa-bolt fa-3x"></i>
+            <div class="headings">
+                <h3>Fat-free</h3>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam numquam dolore consequatur aliquid
+                libero nulla cum quae dignissimos natus sunt odit soluta quas eos ullam repudiandae unde ipsa veritatis,
+                quibusdam, architecto in asperiores! Officiis natus maxime dolor. Impedit, tempora vitae!</p>
+        </div>
+        <div class="features">
+            <i class="fa-solid fa-heart fa-3x"></i>
+            <div class="headings">
+                <h3>Creative commons</h3>
+            </div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias voluptas tempora voluptates nam omnis
+                non similique eos repellendus ex doloribus recusandae quisquam aliquid corrupti corporis minus
+                dignissimos, harum, expedita quae accusamus maxime! Eius odit mollitia nostrum. Ducimus facere voluptas
+                veritatis!</p>
+        </div>
+        <div class="features">
+            <i class="fa-regular fa-face-smile fa-3x"></i>
+            <div class="headings">
+                <h3>Author's support</h3>
+            </div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo dignissimos, ea vero dolorem natus deleniti
+            sapiente nesciunt nihil at optio quod distinctio molestias illum reiciendis blanditiis nostrum, similique
+            quae dicta consectetur tempora. Necessitatibus illo dolorem maiores earum vitae doloremque inventore!
+        </div>
+    </section>
+    <section id="quans">
+        <div class="questions">
+            <h1>Frequently asked questions</h1>
+        </div>
+        <div class="raws">
+            <div class="headings">
+                <h3>Which code editor would you recommend?</h3>
+            </div>
+            <p>I'd highly recommend you <a href="#">Sublime Text </a>- free to try editor which I'm using daily. Awesome
+                tool!</p>
+        </div>
+        <div class="raws">
+            <div class="headings">
+                <h3>Nice header. Where do I find images like that one?</h3>
+            </div>
+            <p>Well, there are thousands of stock art galleries, but personally, I prefer to use photos from these sites
+                <a href="#">Unsplash.com </a>and <a href="#">Flickr - Creative Commons</a>
+            </p>
+        </div>
+        <div class="raws">
+            <div class="headings">
+                <h3>Can I use it to build a site for my client?</h3>
+            </div>
+            <p>Yes, you can. You may use this template for any purpose, just don't forget about the <a
+                    href="#">license</a>, which says: "You must give appropriate credit", le, you must provide the name
+                of the creator and a link to the original template in your work.</p>
+        </div>
+        <div class="raws">
+            <div class="headings">
+                <h3>Can you customize this template for me?</h3>
+            </div>
+            <p>Yes, I can. Please drop me a line to sergey-at-pozhilov.com and describe your needs in details. Please
+                note, my services are not cheap.</p>
+        </div>
+    </section>
+    <section id="repeat">
+        <div class="container3">
+            <div class="moreus">
+                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam provident nam illum itaque. Suscipit
+                    quia iusto dolorem quas? Obcaecati culpa facere quia atque magni possimus, eius, ab dolores, et rem
+                    similique incidunt non maxime tempora ea error! Commodi, ipsum eveniet!</h4>
+            </div>
+            <div class="btn">
+                <a href="index.html">Learn More >></a>
+            </div>
+        </div>
     </section>
     <footer id="main-footer">
         <div class="container">
