--- a/assets/index.html
+++ b/assets/index.html
@@ -14,7 +14,7 @@
         <nav class="header-top">
             <ul>
                 <li class="logo">progressus</li>
-                <li class="navigation navbar active"><a href="#">Home</a></li>
+                <li class="navigation navbar activa"><a href="#">Home</a></li>
                 <li class="navigation"><a href="about.html">About</a></li>
                 <li class="navigation"><a href="contact.html">Contact</a></li>
                 <li>
@@ -172,6 +172,7 @@
             </div>
         </div>
     </footer>
+    <script src="js.js"></script>
 </body>
 
 </html>
